--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ja<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -51,7 +51,7 @@
 				</p>	
 					<hr class="hr1"/>
 				<p id="p4">
-					<input type="button" value="登录" id="sub" onclick="jump();">
+					<input type="button" value="登录" id="sub" onclick="javascript:jump();">
 				</p>
 			</form>
 			
